--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.e0d01731.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.1d121e74.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.ef08101d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.20de3e02.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.77f6c961.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.f229b93f.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.a126eabc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5011f4b8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.0c16bb9b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.f07ff2d9.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
@@ -77,7 +77,7 @@
 			
 			<script>
 				{
-					__sveltekit_16q1cqd = {
+					__sveltekit_164whlg = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -86,10 +86,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.ef08101d.js"),
-						import("./_app/immutable/entry/app.a126eabc.js")
+						import("./_app/immutable/entry/start.20de3e02.js"),
+						import("./_app/immutable/entry/app.0c16bb9b.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_16q1cqd.element, {
+						kit.start(app, __sveltekit_164whlg.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
