--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout.e0d01731.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout.640cd948.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.1d121e74.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.20de3e02.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.6902d2ea.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.77f6c961.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5011f4b8.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.0c16bb9b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.f07ff2d9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ed7c9a58.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.650c9a51.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.177dade4.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.dd6a6df8.js"><title>❤️ Arif Zakuan</title><!-- HEAD_svelte-zaeqxx_START --><meta property="og:title" content="❤️ Arif Zakuan"><!-- HEAD_svelte-zaeqxx_END -->
@@ -77,7 +77,7 @@
 			
 			<script>
 				{
-					__sveltekit_164whlg = {
+					__sveltekit_1dr6vhv = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -86,10 +86,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.20de3e02.js"),
-						import("./_app/immutable/entry/app.0c16bb9b.js")
+						import("./_app/immutable/entry/start.6902d2ea.js"),
+						import("./_app/immutable/entry/app.650c9a51.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_164whlg.element, {
+						kit.start(app, __sveltekit_1dr6vhv.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
